tests/invalid/UnionType_Invalid_19.whiley
type LinkedList is null | { LinkedList next, int data }

property length(LinkedList list, int n)
where length(list.next,n-1)
